--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4599,6 +4599,7 @@ color: #C8C7CC;
 
 #alerting input,.add-label-container{
     height: 32px;
+    border-radius: 5px !important;
 }
 
 #alerting .timepicker .dropdown-toggle{
@@ -5779,4 +5780,22 @@ ul.metrics-dropdown li, ul.metrics-dropdown li a{
 .toast-buttons button {
     margin-left: 10px;
     background: var(--alert-background);
+}
+
+#logs-explorer {
+    width: 100%;
+    height: 400px;
+    height: 400px;
+    border: 1px solid var(--border-btn-color);
+    box-sizing: border-box;
+    border-radius: 5px;
+    box-shadow: var(--box-shadow);
+    margin-bottom: 30px;
+    color: var(--empty-response-text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    display: none;
+    padding: 20px;
 }
